# World-Cup-Predictor

./: .gitignore  README.md  pyproject.toml
.matplotlib/: fontlist-v3.11.0.json
config/: defaults.yaml  team_aliases.yaml
docs/: index.html
notebooks/: kaggle_calibration_backtest_2018.ipynb  kaggle_calibration_backtest_2022.ipynb  kaggle_wc2026.ipynb  kaggle_wc2026_forecast.ipynb  kaggle_wc2026_forecast_final.ipynb  kaggle_wc2026_forecast_qf.ipynb  kaggle_wc2026_forecast_sf.ipynb
output/: bayesian.json  calibration.json  forecast_qf_report.json  forecast_report.json  gbm_away.txt  gbm_home.txt  gbm_meta.json  nn_meta.json  nn_model.pt  nn_pretrain.pt  test_metrics.json  wc2018_calibration_backtest.json  wc2026_forecast_qf_smoke.json
scripts/: build_club_matches.py  build_club_sequences.py  build_features.py  build_flat_test_data.py  build_nn_sequences.py  evaluate_predictions.py  evaluate_test_metrics.py  fetch_understat_matches.py  fit_calibration.py  generate_kaggle_notebook.py  run_backtest.py  run_calibration_backtest_2018.py  run_calibration_backtest_2022.py  run_forecast.py  run_kaggle_forecast.py  run_kaggle_forecast_final.py  run_kaggle_forecast_qf.py  run_kaggle_forecast_sf.py  run_kaggle_pipeline.py  score_round.py  show_forecast.py  train_bayesian.py  train_gbm.py  train_nn.py  validate_bayesian.py  validate_calibration.py  validate_club_data.py  validate_features.py  validate_model.py  validate_nn.py  validate_simulation.py
tests/: conftest.py  test_bayesian_calibration.py  test_bayesian_model.py  test_bayesian_predictor.py  test_bracket.py  (+28 more)
(+78 files in other folders)
